--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "engines": {
-    "node": "20.x"
+    "node": ">=16.0.0"
   },
   "private": true,
   "dependencies": {
