--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "chmod +x node_modules/react-scripts/bin/react-scripts.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
